--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -6,9 +6,23 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item">
-          <%= link_to "Projects", projects_path, class:"nav-link" %>
-        </li>
+
+
+        <% if user_signed_in? %>
+          <li class="nav-item">
+            <%= link_to "Projects", projects_path, class:"nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class:"nav-link" %>
+          </li>
+        <% else %>
+          <li class="nav-item">
+            <%= link_to "Sign Up", new_user_registration_path, class:"nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "Sign In", new_user_session_path, class:"nav-link" %>
+          </li>
+        <% end %>
       </ul>
     </div>
   </div>
