Gave Projects Authors
- Each project has an author
- Projects can only be viewed by their authors

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -12,7 +12,12 @@
 
 <p>
   <strong>Github url:</strong>
-  <%= @project.github_url %>
+  <%= @project.github_url%>
+</p>
+
+<p>
+  <strong>Author:</strong>
+  <%= @project.author_id %>
 </p>
 
 <%= link_to 'Edit', edit_project_path(@project) %> |
