--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -14,12 +14,14 @@
 
   <tbody>
     <% @projects.each do |project| %>
-      <tr>
-        <td><%= link_to project.title, project %></td>
-        <td><%= project.description %></td>
-        <td><%= project.github_url %></td>
-        <td><%= link_to 'Delete', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+      <%if project.author == current_user %>
+        <tr>
+          <td><%= link_to project.title, project %></td>
+          <td><%= project.description %></td>
+          <td><%= project.github_url %></td>
+          <td><%= link_to 'Delete', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+        <% end %>
     <% end %>
   </tbody>
 </table>
