add button to add bug to project

--- a/app/views/bugs/index.html.erb
+++ b/app/views/bugs/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Bugs</h1>
+<h1>Your Bugs</h1>
 
 <table>
   <thead>
@@ -12,9 +12,9 @@
   <tbody>
     <% @bugs.each do |bug| %>
       <tr>
-        <td><%= link_to 'Show', bug %></td>
-        <td><%= link_to 'Edit', edit_bug_path(bug) %></td>
+        <td><%= link_to bug.title, bug %></td>
         <td><%= link_to 'Destroy', bug, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to bug.project.title, project_path(bug.project) %></td>
       </tr>
     <% end %>
   </tbody>
