--- a/app/views/bugs/_form.html.erb
+++ b/app/views/bugs/_form.html.erb
@@ -11,6 +11,14 @@
     </div>
   <% end %>
 
+  <div class="field">
+    <%= form.label :title %>
+    <%= form.text_field :title %>
+    <%= form.hidden_field :project_id, :value => params[:project_id] %>
+  </div>
+  <br>
+
+
   <div class="actions">
     <%= form.submit %>
   </div>
