--- a/app/views/bugs/index.html.erb
+++ b/app/views/bugs/index.html.erb
@@ -2,9 +2,11 @@
 
 <h1>Your Bugs</h1>
 
-<table>
+<table class = "table">
   <thead>
     <tr>
+      <th>Title</th>
+      <th>Project</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,8 +16,9 @@
       <% if bug.author == current_user %>
         <tr>
           <td><%= link_to bug.title, bug %></td>
-          <td><%= link_to 'Destroy', bug, method: :delete, data: { confirm: 'Are you sure?' } %></td>
           <td><%= link_to bug.project.title, project_path(bug.project) %></td>
+          <td><%= link_to 'Destroy', bug, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          
         </tr>
       <% end %>
     <% end %>
