--- a/app/views/bugs/show.html.erb
+++ b/app/views/bugs/show.html.erb
@@ -1,4 +1,9 @@
 <p id="notice"><%= notice %></p>
 
+<p>
+  <strong>Title:</strong>
+  <%= @bug.title %>
+</p>
+
 <%= link_to 'Edit', edit_bug_path(@bug) %> |
 <%= link_to 'Back', bugs_path %>
