--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -13,6 +13,9 @@
             <%= link_to "Projects", projects_path, class:"nav-link" %>
           </li>
           <li class="nav-item">
+            <%= link_to "Bugs", bugs_path, class:"nav-link" %>
+          </li>
+          <li class="nav-item">
             <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class:"nav-link" %>
           </li>
         <% else %>
