--- a/app/views/bugs/_form.html.erb
+++ b/app/views/bugs/_form.html.erb
@@ -14,10 +14,17 @@
   <div class="field">
     <%= form.label :title %>
     <%= form.text_field :title %>
-    <%= form.hidden_field :project_id, :value => params[:project_id] %>
+  </div>
+
+  <div class="field">
+    <%= form.label :description %>
+    <%= form.text_area :description %>
   </div>
   <br>
 
+  <div class="field">
+    <%= form.hidden_field :project_id, :value => params[:project_id] if params[:project_id] %>
+  </div>
 
   <div class="actions">
     <%= form.submit %>
