--- a/app/views/bugs/show.html.erb
+++ b/app/views/bugs/show.html.erb
@@ -5,5 +5,15 @@
   <%= @bug.title %>
 </p>
 
-<%= link_to 'Edit', edit_bug_path(@bug) %> |
+<p>
+  <strong>Description:</strong>
+  <%= @bug.description %>
+</p>
+
+<p>
+  <strong>Project ID:</strong>
+  <%= @bug.project_id %>
+</p>
+
+<%= link_to 'Edit', edit_bug_path(@bug), project_id: @project_id %> |
 <%= link_to 'Back', bugs_path %>
