--- a/app/views/bugs/show.html.erb
+++ b/app/views/bugs/show.html.erb
@@ -11,9 +11,9 @@
 </p>
 
 <p>
-  <strong>Project ID:</strong>
-  <%= @bug.project_id %>
+  <strong>Project:</strong>
+  <%= link_to @projects.find(@bug.project_id).title, project_path(@bug.project_id) %>
 </p>
 
 <%= link_to 'Edit', edit_bug_path(@bug), project_id: @project_id %> |
-<%= link_to 'Back', bugs_path %>
+<%= link_to 'Back', :back %>
