--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -27,10 +27,25 @@
 <br>
 <br>
 
-<% @bugs.each do |bug| %>
-  <%if bug.project == @project %>
+<table class = "table">
+  <thead>
     <tr>
-      <td><%= bug.title %></td>
+      <th>Title</th>
+      <th>Description</th>
+      <th colspan="3"></th>
     </tr>
+  </thead>
+
+  <tbody>
+    <% @bugs.each do |bug| %>
+      <% if bug.project == @project %>
+        <tr>
+          <td><%= link_to bug.title, bug %></td>
+          <td><%= bug.description.to_s[0,20] %></td>
+          <td><%= link_to 'Destroy', bug, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          
+        </tr>
+      <% end %>
     <% end %>
-<% end %>
+  </tbody>
+</table>
